@@ -541,7 +541,7 @@ module Make(Cfg:sig include CompileCommon.Config val moreedges : bool end) : XXX
       ropt,init,insert_isb isb c cs,st
 
 
-    let emit_access_dep st p init e dp r1 = match dp with
+    let emit_access_dep st p init e dp r1 _v1 = match dp with
     | ADDR -> emit_access_dep_addr st p init e r1
     | DATA -> emit_access_dep_data st p init e r1
     | CTRL -> emit_access_ctrl false st p init e r1
