@@ -246,12 +246,12 @@ let emit_access_dep_data st p init e r1 = match e.dir with
         None,init,cs2@cs,st
     end
 
-let emit_access_ctrl st p init e r1 =
+let emit_access_ctrl st p init e r1 v1 =
   if Cfg.realdep then
     let lab =  Label.exit p in
     let rd,st = next_reg st in
     let c =
-       [Instruction (moveq rd r1 kbig) ;
+       [Instruction (movne rd r1 v1) ;
        Instruction (branchcc rd lab) ;] in
     let ropt,init,cs,st = emit_access st p init e in
     ropt,init,c@cs,st
@@ -265,10 +265,10 @@ let emit_access_ctrl st p init e r1 =
     let ropt,init,cs,st = emit_access st p init e in
     ropt,init,c@cs,st
 
-let emit_access_dep  st p init e dp r1 = match dp with
+let emit_access_dep  st p init e dp r1 v1 = match dp with
 | ADDR -> emit_access_dep_addr st p init e r1
 | DATA -> emit_access_dep_data st p init e r1
-| CTRL -> emit_access_ctrl st p init e r1
+| CTRL -> emit_access_ctrl st p init e r1 v1
 
 let emit_exch_dep _ = assert false
 
