@@ -48,7 +48,7 @@ module type S = sig
 
   val emit_access_dep :
       A.st -> Code.proc -> A.init -> C.event -> A.dp ->
-        A.reg -> A.reg option * A.init * A.pseudo list * A.st
+        A.reg -> Code.v -> A.reg option * A.init * A.pseudo list * A.st
 
   val emit_exch_dep :
       A.st -> Code.proc -> A.init -> C.event ->  C.event ->
