@@ -1,3 +1,4 @@
+  * generators: -realdep <bool> option
   * LISA, non-conditional branch.
 7.05
   * litmus -noalign option
